--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,19 +27,24 @@ services:
       - "27017:27017"
     volumes:
       - dbdata6:/data/db
-
-  caddy:
-    image: caddy/caddy:2.2.1-alpine
-    container_name: caddy-service
-    restart: unless-stopped
+  nginx:
+    image: nginx:stable-alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - "3000:80"
     volumes:
-      - $PWD/Caddyfile:/etc/caddy/Caddyfile
-      - $PWD/site:/srv
-      - caddy_data:/data
-      - caddy_config:/config
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+  # caddy:
+  #   image: caddy/caddy:2.2.1-alpine
+  #   container_name: caddy-service
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - $PWD/Caddyfile:/etc/caddy/Caddyfile
+  #     - $PWD/site:/srv
+  #     - caddy_data:/data
+  #     - caddy_config:/config
 volumes:
   dbdata6:
   appdata:
