--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,10 +29,13 @@ services:
       - dbdata6:/data/db
   nginx:
     image: nginx:stable-alpine
-    ports:
-      - "4000:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/app.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - rest-api
+    ports:
+      - 80:80
+
   # caddy:
   #   image: caddy/caddy:2.2.1-alpine
   #   container_name: caddy-service
