--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,14 +1,20 @@
-server {
-    listen 80;
+http {
+    upstream rest-api {
+        server rest-api:4000;
+    }
 
-    location /api/ {
-        proxy_pass http://rest-api:4000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    server {
+        listen 80;
 
-        # These next two headers are important to ensure that WebSockets work
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        location /api/ {
+            proxy_pass http://rest-api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # These next two headers are important to ensure that WebSockets work
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 }
