--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -9,8 +9,8 @@ http {
     server {
         listen 80;
 
-        location /api/ {
-            proxy_pass http://rest-api/;
+        location / {
+            proxy_pass http://rest-api/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
