--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,7 +30,9 @@ services:
   nginx:
     image: nginx:stable-alpine
     volumes:
-      - ./nginx/app.conf:/etc/nginx/nginx.conf
+      - ./nginx/app.conf:/etc/nginx/app.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - rest-api
     ports:
@@ -43,7 +45,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email {email} -d {domain} --agree-tos
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email ritdragon@gmail.com -d 178.128.113.92 --agree-tos
 
 volumes:
   dbdata6:
