--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -11,7 +11,7 @@ http {
     server {
         listen 80 default_server;
 
-        server_name _;
+        server_name www.poke-api.online poke-api.online;
 
         return 301 https://$host$request_uri;
     }
@@ -20,9 +20,9 @@ http {
     server {
         listen 443 ssl http2;
         # use the certificates
-        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
-        server_name {domain};
+        ssl_certificate     /etc/letsencrypt/live/www.poke-api.online/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.poke-api.online/privkey.pem;
+        server_name www.poke-api.online;
         root /var/www/html;
         index index.php index.html index.htm;
 
@@ -32,7 +32,7 @@ http {
         }
 
         location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+            root /var/www/certbot/www;
         }
     }
 
