--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -32,7 +32,7 @@ http {
         }
 
         location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot/www;
+            root /var/www/pokemon-card-backend/certbot/www;
         }
     }
 
