--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -31,9 +31,10 @@ http {
             proxy_pass http://rest-api/;
         }
 
-        location ~ /.well-known/acme-challenge/ {
+       location ^~ /.well-known/acme-challenge/ {
             root /var/www/pokemon-card-backend/certbot/www;
         }
+
     }
 
     # server {
