--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -22,7 +22,7 @@ http {
         # use the certificates
         ssl_certificate     /etc/letsencrypt/live/www.poke-api.online/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/www.poke-api.online/privkey.pem;
-        server_name www.poke-api.online;
+        server_name poke-api.online;
         root /var/www/html;
         index index.php index.html index.htm;
 
@@ -31,24 +31,9 @@ http {
             proxy_pass http://rest-api/;
         }
 
-       location ^~ /.well-known/acme-challenge/ {
-            root /var/www/pokemon-card-backend/certbot/www;
+        location ^~ /.well-known/acme-challenge/ {
+            root /var/www/certbot/www;
         }
-
     }
 
-    # server {
-    #     listen 80;
-
-    #     location / {
-    #         proxy_pass http://rest-api/;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-    #         # These next two headers are important to ensure that WebSockets work
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #     }
-    # }
 }
