--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -22,8 +22,8 @@ http {
         # use the certificates
         ssl_certificate     /etc/letsencrypt/live/www.poke-api.online/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/www.poke-api.online/privkey.pem;
-        server_name poke-api.online;
-        root /var/www/html;
+        server_name www.poke-api.online;
+        root /var/www/pokemon-card-backend/certbot/www;
         index index.php index.html index.htm;
 
 
@@ -31,9 +31,11 @@ http {
             proxy_pass http://rest-api/;
         }
 
-        location ^~ /.well-known/acme-challenge/ {
-            root /var/www/certbot/www;
+       location ^~ /.well-known/acme-challenge/ {
+            root /var/www/pokemon-card-backend/certbot/www;
         }
+
     }
 
+ 
 }
