--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -45,7 +45,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email ritdragon@gmail.com -d www.poke-api.online --agree-tos
+    command: certonly --webroot -w /var/www/pokemon-card-backend/certbot/www --force-renewal --email ritdragon@gmail.com -d www.poke-api.online --agree-tos
 
 volumes:
   dbdata6:
