--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -27,7 +27,7 @@ http {
         index index.php index.html index.htm;
 
 
-        location / {
+        location /api {
             proxy_pass http://rest-api/;
         }
 
