--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -7,34 +7,51 @@ http {
     }
 
     
-    # always redirect to https
-    server {
-        listen 80 default_server;
+    # # always redirect to https
+    # server {
+    #     listen 80 default_server;
 
-        server_name www.poke-api.online poke-api.online;
+    #     server_name www.poke-api.online poke-api.online;
 
-        return 301 https://$host$request_uri;
-    }
+    #     return 301 https://$host$request_uri;
+    # }
 
     
+    # server {
+    #     listen 443 ssl http2;
+    #     # use the certificates
+    #     ssl_certificate     /etc/letsencrypt/live/www.poke-api.online/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/www.poke-api.online/privkey.pem;
+    #     server_name www.poke-api.online;
+    #     root /var/www/pokemon-card-backend/certbot/www;
+    #     index index.php index.html index.htm;
+
+
+    #     location /api {
+    #         proxy_pass http://rest-api/;
+    #     }
+
+    #    location ^~ /.well-known/acme-challenge/ {
+    #         root /var/www/pokemon-card-backend/certbot/www;
+    #     }
+
+    # }
+
     server {
-        listen 443 ssl http2;
-        # use the certificates
-        ssl_certificate     /etc/letsencrypt/live/www.poke-api.online/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/www.poke-api.online/privkey.pem;
-        server_name www.poke-api.online;
-        root /var/www/pokemon-card-backend/certbot/www;
-        index index.php index.html index.htm;
+        listen 80;
+        listen [::]:80;
 
+        server_name test.mrshanas.com;
+        server_tokens off;
 
-        location /api {
-            proxy_pass http://rest-api/;
+        location /.well-known/acme-challenge/ {
+            allow all;
+            root /tmp/acme-challenge;
         }
 
-       location ^~ /.well-known/acme-challenge/ {
-            root /var/www/pokemon-card-backend/certbot/www;
+        location / {
+            return 301 https://$host$request_uri;
         }
-
     }
 
  
