--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -41,7 +41,7 @@ http {
         listen 80;
         listen [::]:80;
 
-        server_name test.mrshanas.com;
+        server_name www.poke-api.online poke-api.online;
         server_tokens off;
 
         location /.well-known/acme-challenge/ {
