--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -39,20 +39,35 @@ http {
 
     server {
         listen 80;
-        listen [::]:80;
-
-        server_name www.poke-api.online poke-api.online;
-        server_tokens off;
-
-        location /.well-known/acme-challenge/ {
-            allow all;
-            root /tmp/acme-challenge;
-        }
 
         location / {
-            return 301 https://$host$request_uri;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+            proxy_pass http://rest-api;
+            proxy_redirect off;
+
         }
-    }
+}
+
+    # server {
+    #     listen 80;
+    #     listen [::]:80;
+
+    #     server_name www.poke-api.online poke-api.online;
+    #     server_tokens off;
+
+    #     location /.well-known/acme-challenge/ {
+    #         allow all;
+    #         root /tmp/acme-challenge;
+    #     }
+
+    #     location / {
+    #         return 301 https://$host$request_uri;
+    #     }
+    # }
 
  
 }
