--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -39,6 +39,7 @@ http {
 
     server {
         listen 80;
+        server_name www.poke-api.online poke-api.online;
 
         location / {
             proxy_set_header X-Real-IP $remote_addr;
