--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -9,21 +9,30 @@ http {
 
 
     server {
-        listen 80;
-        server_name _;
-        # server_name www.poke-api.online poke-api.online;
+    listen 80;
+    server_name www.poke-api.online poke-api.online;
 
-        location / {
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location / {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-            proxy_set_header Host $http_host;
-            proxy_set_header X-NginX-Proxy true;
-            proxy_pass http://rest-api;
-            proxy_redirect off;
-
-        }
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_pass http://rest-api:4000;
+        proxy_redirect off;
     }
+
+    location /api {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_pass http://rest-api:4000;
+        proxy_redirect off;
+    }
+}
+
 
  
 }
