--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -2,9 +2,9 @@ events {
   worker_connections  1024;
 }
 http {
-    upstream rest-api {
-        server rest-api:4000;
-    }
+    # upstream rest-api {
+    #     server rest-api:4000;
+    # }
 
 
 
@@ -32,7 +32,6 @@ http {
         proxy_redirect off;
     }
 }
-
 
  
 }
