--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -28,7 +28,7 @@ http {
 
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://rest-api:4000;
+        proxy_pass http://localhost:4000;
         proxy_redirect off;
     }
 }
