--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -2,13 +2,11 @@ events {
   worker_connections  1024;
 }
 http {
-    # upstream rest-api {
-    #     server rest-api:4000;
-    # }
+   upstream rest-api {
+    server rest-api:4000;
+}
 
-
-
-    server {
+server {
     listen 80;
     server_name www.poke-api.online poke-api.online;
 
@@ -18,17 +16,7 @@ http {
 
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://rest-api:4000;
-        proxy_redirect off;
-    }
-
-    location /api {
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_set_header Host $http_host;
-        proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://localhost:4000;
+        proxy_pass http://rest-api;
         proxy_redirect off;
     }
 }
