--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -3,23 +3,23 @@ events {
 }
 http {
    upstream rest-api {
-    server rest-api:4000;
-}
-
-server {
-    listen 80;
-    server_name www.poke-api.online poke-api.online;
-
-    location / {
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_set_header Host $http_host;
-        proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://rest-api;
-        proxy_redirect off;
+        server rest-api:4000;
     }
-}
+
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://rest-api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # These next two headers are important to ensure that WebSockets work
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+    }
 
  
 }
