--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -54,8 +54,8 @@ services:
     image: nginx:stable-alpine
     volumes:
       - ./nginx/app.conf:/etc/nginx/app.conf
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      # - ./certbot/conf:/etc/letsencrypt
+      # - ./certbot/www:/var/www/certbot
     depends_on:
       - rest-api
     ports:
