--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,26 +1,25 @@
 events {
   worker_connections  1024;
 }
-http {
-   upstream rest-api {
-        server rest-api:4000;
-    }
 
-   server {
+http {
+  upstream rest-api {
+    server rest-api:4000;
+  }
+
+  server {
     listen 80;
     server_name www.poke-api.online poke-api.online;
 
-    location / {
-        proxy_pass http://rest-api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location /api/ {
+      proxy_pass http://rest-api;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # These next two headers are important to ensure that WebSockets work
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+      # These next two headers are important to ensure that WebSockets work
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
     }
-}
-
- 
+  }
 }
