--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -39,8 +39,8 @@ services:
 
 networks:
   default:
-    external:
-      name: bridge
+    name: bridge
+    external: true
 
 volumes:
   dbdata6:
