--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-rest-api.snipd.io {
+poke-api.online {
     reverse_proxy rest-api:4000 {
         header_down Strict-Transport-Security max-age=31536000;
     }
