--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,15 +28,29 @@ services:
     volumes:
       - dbdata6:/data/db
 
-  nginx:
-    image: nginx:stable-alpine
-    volumes:
-      - ./nginx/app.conf:/etc/nginx/app.conf
-    depends_on:
-      - rest-api
+  # nginx:
+  #   image: nginx:stable-alpine
+  #   volumes:
+  #     - ./nginx/app.conf:/etc/nginx/app.conf
+  #   depends_on:
+  #     - rest-api
+  #   ports:
+  #     - 80:80
+  caddy:
+    image: caddy/caddy:2.2.1-alpine
+    container_name: caddy-service
+    restart: unless-stopped
     ports:
-      - 80:80
+      - "80:80"
+      - "443:443"
+    volumes:
+      - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/site:/srv
+      - caddy_data:/data
+      - caddy_config:/config
 
 volumes:
+  caddy_data:
+  caddy_config:
   dbdata6:
   appdata:
