--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,14 +29,14 @@ services:
       - dbdata6:/data/db
 
   nginx:
+    container_name: nginx
     image: nginx:stable-alpine
     volumes:
-      - ./nginx/app.conf:/etc/nginx/app.conf
+      - ./nginx/app.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - rest-api
     ports:
       - 80:80
-
 volumes:
   dbdata6:
   appdata:
