--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name www.poke-api.online poke-api.online;;
 
     location / {
         proxy_pass http://rest-api:4000;
