--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,6 +37,14 @@ services:
       - rest-api
     ports:
       - 80:80
+      - 443:443
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
 volumes:
   dbdata6:
   appdata:
