--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,15 +1,56 @@
-server {
-    listen 80;
-    server_name www.poke-api.online poke-api.online;;
+http {
+    server_tokens off;
+    charset utf-8;
 
-    location / {
-        proxy_pass http://rest-api:4000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+     # always redirect to https
+    server {
+        listen 80 default_server;
 
-        # These next two headers are important to ensure that WebSockets work
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        server_name www.poke-api.online poke-api.online;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
+        # use the certificates
+        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
+        server_name {domain};
+        root /var/www/html;
+        index index.php index.html index.htm;
+
+
+        location / {
+            proxy_pass http://rest-api:4000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # These next two headers are important to ensure that WebSockets work
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
     }
 }
+
+
+# server {
+#     listen 80;
+#     server_name www.poke-api.online poke-api.online;
+
+#     location / {
+#         proxy_pass http://rest-api:4000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+#         # These next two headers are important to ensure that WebSockets work
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#     }
+# }
