--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,11 +32,19 @@ services:
     container_name: nginx
     image: nginx:stable-alpine
     volumes:
-      - ./nginx/app.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/app.dev.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - rest-api
     ports:
       - 80:80
+      - 443:443
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w . --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
 volumes:
   dbdata6:
   appdata:
