--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,7 +32,7 @@ services:
     container_name: nginx
     image: nginx:stable-alpine
     volumes:
-      - ./nginx/app.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/app.prod.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - rest-api
     ports:
@@ -44,7 +44,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/pokemon-card-backend/certbot --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
+    command: certonly --webroot -w . --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
 volumes:
   dbdata6:
   appdata:
