--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -33,7 +33,9 @@ http {
         }
 
         location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+            # root /var/www/certbot;
+            root /var/www/pokemon-card-backend;
+
         }
     }
 }
