--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,6 +33,8 @@ services:
     image: nginx:stable-alpine
     volumes:
       - ./nginx/app.dev.conf:/etc/nginx/conf.d/default.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - rest-api
     ports:
@@ -44,7 +46,18 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w . --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
+    # command: certonly --webroot -w /var/www/certbot --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
+    command:
+      - certonly
+      - --webroot
+      - -w
+      - /var/www/certbot/html
+      - --email=haris.wm23@gmail.com
+      - --agree-tos
+      - --no-eff-email
+      - --dry-run
+      - -d
+      - poke-api.online
 volumes:
   dbdata6:
   appdata:
