--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -14,9 +14,9 @@ http {
     server {
         listen 443 ssl http2;
         # use the certificates
-        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
-        server_name {domain};
+        ssl_certificate     /etc/letsencrypt/live/poke-api.online/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/poke-api.online/privkey.pem;
+        server_name poke-api.online;
         root /var/www/html;
         index index.php index.html index.htm;
 
@@ -33,8 +33,8 @@ http {
         }
 
         location ~ /.well-known/acme-challenge/ {
-            # root /var/www/certbot;
-            root /var/www/pokemon-card-backend;
+            root /var/www/certbot;
+            # root /var/www/pokemon-card-backend;
 
         }
     }
