--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -8,7 +8,13 @@
 
         server_name www.poke-api.online poke-api.online;
 
-        return 301 https://$host$request_uri;
+        location ^~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
     }
 
     server {
@@ -32,9 +38,7 @@
             proxy_set_header Connection "upgrade";
         }
 
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-            # root /var/www/pokemon-card-backend;
-
-        }
+        # location ~ /.well-known/acme-challenge/ {
+        #     root /var/www/certbot;
+        # }
     }
