--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -8,21 +8,15 @@
 
         server_name www.poke-api.online poke-api.online;
 
-        location ^~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$server_name$request_uri;
-        }
+        return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl http2;
         # use the certificates
-        ssl_certificate     /etc/letsencrypt/live/poke-api.online/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/poke-api.online/privkey.pem;
-        server_name poke-api.online;
+        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
+        server_name {domain};
         root /var/www/html;
         index index.php index.html index.htm;
 
@@ -38,7 +32,9 @@
             proxy_set_header Connection "upgrade";
         }
 
-        # location ~ /.well-known/acme-challenge/ {
-        #     root /var/www/certbot;
-        # }
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            # root /var/www/pokemon-card-backend;
+
+        }
     }
