--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,6 +37,7 @@ services:
       - ./certbot/www:/var/www/certbot
     depends_on:
       - rest-api
+      - certbot
     ports:
       - 80:80
       - 443:443
