--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -8,7 +8,16 @@
 
         server_name www.poke-api.online poke-api.online;
 
-        return 301 https://$host$request_uri;
+        location /.well-known/acme-challenge/ {
+            root /var/www;                         # no 'certbot' dir here
+        }
+
+         location / {
+            return 301 https://example.com$request_uri;
+        }
+
+
+        # return 301 https://$host$request_uri;
     }
 
     server {
@@ -33,7 +42,7 @@
         }
 
         location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+            root /var/www;
             # root /var/www/pokemon-card-backend;
 
         }
