--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,7 +34,7 @@ services:
     volumes:
       - ./nginx/app.prod.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - ./certbot/www:/var/www
     depends_on:
       - rest-api
       - certbot
@@ -46,8 +46,12 @@ services:
     container_name: certbot
     volumes:
       - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
+      - ./certbot/www:/var/www
+    # command: certonly --webroot -w /var/www --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
+    command: certonly -v --dry-run --webroot --webroot-path=/var/www
+      --preferred-challenges http-01 --email haris.wm23@gmail.com
+      --agree-tos --no-eff-email --non-interactive --force-renewal
+      -d poke-api.online
 volumes:
   dbdata6:
   appdata:
