--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,7 +34,8 @@ services:
     volumes:
       - ./nginx/app.prod.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www
+      - ./certbot/www:/var/www/_letsencrypt
+      - ./certbot/certbot_var:/var/lib/letsencrypt
     depends_on:
       - rest-api
       - certbot
@@ -46,9 +47,11 @@ services:
     container_name: certbot
     volumes:
       - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www
+      - ./certbot/www:/var/www/_letsencrypt
+      - ./certbot/certbot_var:/var/lib/letsencrypt
     # command: certonly --webroot -w /var/www --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
-    command: certonly -v --dry-run --webroot --webroot-path=/var/www
+    command:
+      certonly -v --dry-run --webroot --webroot-path=/var/www/_letsencrypt
       --preferred-challenges http-01 --email haris.wm23@gmail.com
       --agree-tos --no-eff-email --non-interactive --force-renewal
       -d poke-api.online
