--- a/nginx/app.dev.conf
+++ b/nginx/app.dev.conf
@@ -1,12 +1,23 @@
 server_tokens off;
 charset utf-8;
 
-# Always redirect to HTTPS
-server {
-    listen 80 default_server;
-    server_name localhost;
-    return 301 https://$host$request_uri;
-}
+ # always redirect to https
+    server {
+        listen 80 default_server;
+
+        server_name www.poke-api.online poke-api.online;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www;                         # no 'certbot' dir here
+        }
+
+         location / {
+            return 301 https://example.com$request_uri;
+        }
+
+
+        # return 301 https://$host$request_uri;
+    }
 
 server {
     listen 443 ssl http2;
@@ -28,7 +39,7 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
-    location ~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    # location ~ /.well-known/acme-challenge/ {
+    #     root /var/www/certbot;
+    # }
 }
