--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -21,29 +21,27 @@
     }
 
     server {
-        listen 443 ssl http2;
-        # use the certificates
-        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
-        server_name {domain};
-        root /var/www/html;
-        index index.php index.html index.htm;
+    listen 443 ssl http2;
+    # Use the certificates
+    ssl_certificate     /etc/letsencrypt/live/poke-api.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/poke-api.online/privkey.pem;
+    server_name poke-api.online;
+    root /var/www/html;
+    index index.php index.html index.htm;
 
+    location / {
+        proxy_pass http://rest-api:4000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        location / {
-            proxy_pass http://rest-api:4000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-            # These next two headers are important to ensure that WebSockets work
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www;
-            # root /var/www/pokemon-card-backend;
-
-        }
+        # These next two headers are important to ensure that WebSockets work
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
+
+    # location ~ /.well-known/acme-challenge/ {
+    #     root /var/www/certbot;
+    # }
+}
+
