--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,9 +33,8 @@ services:
     image: nginx:stable-alpine
     volumes:
       - ./nginx/app.prod.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/_letsencrypt
-      - ./certbot/certbot_var:/var/lib/letsencrypt
+      - ./certbot/letsencrypt:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - rest-api
       - certbot
@@ -46,14 +45,11 @@ services:
     image: certbot/certbot
     container_name: certbot
     volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/_letsencrypt
-      - ./certbot/certbot_var:/var/lib/letsencrypt
+      - ./certbot/letsencrypt:/etc/letsencrypt
+      - ./certbot/www:/tmp/letsencrypt
+      - ./certbot/log:/var/log
     # command: certonly --webroot -w /var/www --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
-    command: certonly -v --dry-run --webroot --webroot-path=/var/www
-      --preferred-challenges http-01 --email haris.wm23@gmail.com
-      --agree-tos --no-eff-email --non-interactive --force-renewal
-      -d poke-api.online
+    command: certonly --webroot --agree-tos --renew-by-default --preferred-challenges http-01 --server https://acme-v02.api.letsencrypt.org/directory --text --email haris.wm23@gmail.com -w /tmp/letsencrypt -d poke-api.online
 volumes:
   dbdata6:
   appdata:
