--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -9,7 +9,7 @@
         server_name www.poke-api.online poke-api.online;
 
         location /.well-known/acme-challenge/ {
-            root /var/www;                         # no 'certbot' dir here
+            root /var/www/certbot                         # no 'certbot' dir here
         }
 
          location / {
@@ -40,8 +40,8 @@
         proxy_set_header Connection "upgrade";
     }
 
-    # location ~ /.well-known/acme-challenge/ {
-    #     root /var/www/certbot;
-    # }
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 }
 
