--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -9,7 +9,7 @@
         server_name www.poke-api.online poke-api.online;
 
         location /.well-known/acme-challenge/ {
-            root /var/www/certbot                         # no 'certbot' dir here
+            root /var/www/certbot;                       # no 'certbot' dir here
         }
 
          location / {
