--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -23,9 +23,9 @@
     server {
     listen 443 ssl http2;
     # Use the certificates
-    ssl_certificate     /etc/letsencrypt/live/poke-api.online/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/poke-api.online/privkey.pem;
-    server_name poke-api.online;
+    ssl_certificate     /etc/letsencrypt/live/www.poke-api.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.poke-api.online/privkey.pem;
+    server_name www.poke-api.online;
     root /var/www/html;
     index index.php index.html index.htm;
 
