--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,7 +33,7 @@ services:
     image: nginx:stable-alpine
     volumes:
       - ./nginx/app.prod.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/letsencrypt:/etc/letsencrypt
+      - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     depends_on:
       - rest-api
@@ -45,11 +45,11 @@ services:
     image: certbot/certbot
     container_name: certbot
     volumes:
-      - ./certbot/letsencrypt:/etc/letsencrypt
-      - ./certbot/www:/tmp/letsencrypt
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
       - ./certbot/log:/var/log
     # command: certonly --webroot -w /var/www --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
-    command: certonly --webroot --agree-tos --renew-by-default --preferred-challenges http-01 --server https://acme-v02.api.letsencrypt.org/directory --text --email haris.wm23@gmail.com -w /tmp/letsencrypt -d www.poke-api.online
+    command: certonly --webroot --agree-tos --renew-by-default --preferred-challenges http-01 --server https://acme-v02.api.letsencrypt.org/directory --text --email haris.wm23@gmail.com -w /var/www/certbot -d www.poke-api.online
 volumes:
   dbdata6:
   appdata:
