--- a/nginx/app.prod.conf
+++ b/nginx/app.prod.conf
@@ -8,12 +8,12 @@
 
         server_name www.poke-api.online poke-api.online;
 
-        location ~ /.well-known/acme-challenge/ {
+        location /.well-known/acme-challenge/ {
             root /var/www/certbot;                       # no 'certbot' dir here
         }
 
          location / {
-            return 301 https://example.com$request_uri;
+            return 301 https://$host$request_uri;
         }
 
 
@@ -40,8 +40,8 @@
         proxy_set_header Connection "upgrade";
     }
 
-    location ~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    # location ~ /.well-known/acme-challenge/ {
+    #     root /var/www/certbot;
+    # }
 }
 
