--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -49,7 +49,9 @@ services:
       - ./certbot/www:/var/www/certbot
       - ./certbot/log:/var/log
     # command: certonly --webroot -w /var/www --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
-    command: certonly --webroot --agree-tos --renew-by-default --preferred-challenges http-01 --server https://acme-v02.api.letsencrypt.org/directory --text --email haris.wm23@gmail.com -w /var/www/certbot -d www.poke-api.online
+    command: certonly --webroot -w /var/www/certbot --email
+      / haris.wm23@gmail.com -d www.poke-api.online
+      / --agree-tos --renew-by-default
 volumes:
   dbdata6:
   appdata:
