--- a/nginx/app.dev.conf
+++ b/nginx/app.dev.conf
@@ -8,15 +8,14 @@ charset utf-8;
         server_name www.poke-api.online poke-api.online;
 
         location /.well-known/acme-challenge/ {
-            root /var/www;                         # no 'certbot' dir here
+            root /var/www/certbot;                         # no 'certbot' dir here
         }
 
          location / {
-            return 301 https://example.com$request_uri;
+            return 301 https://$host$request_uri;
         }
 
 
-        # return 301 https://$host$request_uri;
     }
 
 server {
@@ -39,7 +38,7 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
-    # location ~ /.well-known/acme-challenge/ {
-    #     root /var/www/certbot;
-    # }
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 }
